Initial SSR work and more point lights

--- a/DX11Renderer/DX11Renderer/imgui.ini
+++ b/DX11Renderer/DX11Renderer/imgui.ini
@@ -11,10 +11,10 @@ Collapsed=0
 [Window][Simulation Speed]
 Pos=972,12
 Size=297,88
-Collapsed=1
+Collapsed=0
 
 [Window][Camera]
-Pos=13,47
+Pos=12,41
 Size=282,245
 Collapsed=0
 
@@ -25,8 +25,8 @@ Collapsed=0
 
 [Window][Log]
 Pos=4,292
-Size=385,411
-Collapsed=0
+Size=369,411
+Collapsed=1
 
 [Window][Light0]
 Pos=964,397
@@ -71,5 +71,210 @@ Collapsed=1
 [Window][Light8]
 Pos=1078,79
 Size=169,323
+Collapsed=0
+
+[Window][Light9]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light10]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light11]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light12]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light13]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light14]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light15]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light16]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light17]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light18]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light19]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light20]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light21]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light22]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light23]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light24]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light25]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light26]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light27]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light28]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light29]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light30]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light31]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light32]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light33]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light34]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light35]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light36]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light37]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light38]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light39]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light40]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light41]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light42]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light43]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light44]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light45]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light46]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light47]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light48]
+Pos=60,60
+Size=131,226
+Collapsed=0
+
+[Window][Light49]
+Pos=60,60
+Size=131,226
 Collapsed=0
 
